# gdeflate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Samples/GpuDecompressionBenchmark/: Compression.cpp  Compression.h  CustomDecompression.h  DStorageTestContext.h  GpuDecompressionBenchmark.cpp  GpuDecompressionBenchmark.vcxproj  Metadata.cpp  Metadata.h  README.md  UncompressedCodec.h  Validation.cpp  Validation.h  Visualization.xlsx  packages.config
include/: GDeflate.h  GDeflateConfig.h
src/: GDeflateCompress.cpp  GDeflateDecompress.cpp  TileStream.h  Utils.h
zstd/: zstd.sln
zstd/zstdgpu/: zstdgpu.cpp  zstdgpu_lds_decl_base.h  zstdgpu_reference_store.cpp  zstdgpu_resources.h  zstdgpu_shaders.h  zstdgpu_structs.h
zstd/zstdgpu/Shaders/: ZstdGpuComputePrefixSum.hlsl  ZstdGpuDecompressHuffmanWeights.hlsl  ZstdGpuDecompressLiterals.hlsl  ZstdGpuDecompressLiterals_LdsStoreCache.hlsli  ZstdGpuDecompressLiterals_LdsStoreCache128_8.hlsl  ZstdGpuDecompressLiterals_LdsStoreCache32_16.hlsl  ZstdGpuDecompressLiterals_LdsStoreCache32_32.hlsl  ZstdGpuDecompressLiterals_LdsStoreCache32_8.hlsl  ZstdGpuDecompressLiterals_LdsStoreCache64_16.hlsl  ZstdGpuDecompressLiterals_LdsStoreCache64_8.hlsl  ZstdGpuDecompressSequences.hlsl  ZstdGpuDecompressSequences_LdsFseCache.hlsli  ZstdGpuDecompressSequences_LdsFseCache128.hlsl  ZstdGpuDecompressSequences_LdsFseCache64.hlsl  ZstdGpuDecompressSequences_Scalar128.hlsl  ZstdGpuDecompressSequences_Scalar32.hlsl  ZstdGpuDecompressSequences_Scalar64.hlsl  ZstdGpuExecuteSequences.hlsl  ZstdGpuInitFseTable.hlsl  ZstdGpuInitHuffmanTable.hlsl  ZstdGpuInitResources.hlsl
zstd/zstdgpu_demo/: main.cpp
zstd/zstdgpu_tests/: internal_test_content.txt  public_test_content.txt  zstdgpu_tests.cpp
